# gvlad

./: README.txt
src/: CMakeLists.txt
src/gvlad/exe/: CMakeLists.txt  compute_adaptation.cpp  compute_descriptor.cpp  compute_gvlad.cpp  compute_vlad.cpp  compute_vocabulary.cpp  crop_voc.cpp  evaluate_holiday.cpp  evaluate_voc.cpp
src/gvlad/lib/: Angle.cpp  Angle.h  CMakeLists.txt  Classifier.cpp  Classifier.h  Compressor.cpp  Compressor.h  Descriptor.cpp  Descriptor.h  DetectorDescriptor.cpp  DetectorDescriptor.h  File.cpp  File.h  GeoDescriptor.cpp  GeoDescriptor.h  GeoDescriptorVector.cpp  GeoDescriptorVector.h  GeometricVerifier.cpp  GeometricVerifier.h  GlobalConfig.cpp  GlobalConfig.h  KnnClassifier.cpp  KnnClassifier.h  Math.cpp  Math.h  RankItem.h  SVMClassifier.cpp  SVMClassifier.h  Serializer.cpp  Serializer.h  Timer.cpp  Timer.h  Vocabulary.cpp  Vocabulary.h
src/gvlad/server/: ANNDaemon.cpp  ANNDaemon.h  ANNDaemon.thrift  ANNDaemon_client.cpp  ANNDaemon_constants.cpp  ANNDaemon_constants.h  ANNDaemon_server.cpp  ANNDaemon_types.cpp  ANNDaemon_types.h  CMakeLists.txt
